Funcionou um banco de Dados Paralelo

--- a/Aula5/Estoque/Web.config
+++ b/Aula5/Estoque/Web.config
@@ -19,14 +19,8 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <!---->add name="EstoqueContext"
-      connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|DatabaseName.mdf;Integrated Security=True;User Instance=True"
-      providerName="System.Data.SqlClient" /-->
-    <add name="EstoqueContext"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\source\repos\AulasDeAsp\Aula5\Estoque\App_Data\Database1.mdf;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-
-  </connectionStrings>
+  <add name="BancoProdutos" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\Source\Repos\aulasdeasp\Aula5\Estoque\App_Data\BancoProdutos.mdf;Integrated Security=True" providerName=".NET Framework Data Provider for SQL Server" />
+</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
