--- a/Aula5/Estoque/Web.config
+++ b/Aula5/Estoque/Web.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-  <add name="BancoProdutos" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\Source\Repos\aulasdeasp\Aula5\Estoque\App_Data\BancoProdutos.mdf;Integrated Security=True" providerName=".NET Framework Data Provider for SQL Server" />
+  <add name="EstoqueContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\Source\Repos\AulasDeAsp\Aula5\Estoque\App_Data\Estoque.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
 </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
