--- a/Aula5/Estoque/Estoque.csproj
+++ b/Aula5/Estoque/Estoque.csproj
@@ -126,6 +126,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Produto\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Produto\Form.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
