--- a/BLContainer_TP02/BLContainer_TP02/Web.config
+++ b/BLContainer_TP02/BLContainer_TP02/Web.config
@@ -20,6 +20,9 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
+  <connectionStrings>
+    <add name="TerminalContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\Source\Repos\aulasdeasp\BLContainer_TP02\BLContainer_TP02\App_Data\Terminal.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
