Funcionando Botão Novo

--- a/BLContainer_TP02/BLContainer_TP02/Web.config
+++ b/BLContainer_TP02/BLContainer_TP02/Web.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="TerminalContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\Source\Repos\aulasdeasp\BLContainer_TP02\BLContainer_TP02\App_Data\Terminal.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TerminalContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\aluno\Source\Repos\aulasdeasp2\BLContainer_TP02\BLContainer_TP02\App_Data\Terminal.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
